# eth-diff-fuzz

./: Cargo.toml  README.md  go.mod  go.sum
driver/: corpus.go  go.mod  go.sum  main.go  mutate.go  random.go  vectors.go
driver/corpus/: main.go  vectors.go
drivers/consensus/: .gitignore  vectors.go
processors/golang/: go.mod  go.sum  main.go
processors/golang/execution/precompiles/: common.go  erigon.go  geth.go
processors/golang/execution/utils/: utils.go
processors/golang/types/: erigon.go  geth.go
processors/golang/utils/: precompiles.go
processors/java/: Main.java  Makefile
processors/rust/: Cargo.toml  main.rs
processors/rust/execution/: mod.rs
processors/rust/execution/precompiles/: common.rs  mod.rs  reth.rs
processors/rust/execution/types/: reth.rs
